src/objects/Course_Assignment__c.object
<CustomObject>
    <description>Course Assignments data</description>
    <fields>
        <fullName>Course__c</fullName>
        <description>Course lookup</description>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Assignments</relationshipLabel>
        <relationshipName>Course_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Course Assigmnet Status</description>
        <inlineHelpText>Course Assigmnet Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Contact_Role_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Training Contact Role Detail reference</description>
        <inlineHelpText>Training Contact Role Detail reference</inlineHelpText>
        <label>Training Contact Role Detail</label>
        <referenceTo>Training_Contact_Role_Details__c</referenceTo>
        <relationshipLabel>Course Assignments</relationshipLabel>
        <relationshipName>Course_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Name__c</fullName>
        <formula>Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Name</label>
        <type>Text</type>
    </fields>
    <label>Course Assignment</label>
    <nameField>
        <displayFormat>CourseAssign-{000000}</displayFormat>
        <label>Course Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>